fixed sorting by date issue

--- a/Dailynews/Views/Home/Index.cshtml
+++ b/Dailynews/Views/Home/Index.cshtml
@@ -45,7 +45,8 @@
                 { bSortable: true },
                 { bSortable: true },
                 { bSortable: false }
-            ]
+            ],
+            "columnDefs": [{ "targets": 2, "type": "date" }]
         });
     });
 </script>
